# Buried_Point_SDK

./: CMakeLists.txt  README.md
examples/: context_example.cc
include/: buried.h
scripts/: build.py
src/: CMakeLists.txt  buried.cc  buried_core.cc  buried_core.h
src/common/: common_service.cc
src/context/: context.cc
src/crypt/: crypt.cc
src/database/: database.cc  database.h
src/report/: buried_report.cc  buried_report.h  http_report.h
tests/: test_http.cc
